# libSWOS

./: CMakeLists.txt  LICENSE  README.md
include/SwosEdt/: swoscore.h  swosdb.h  swosedt.h
src/SwosEdt/: swosdb.cc
test/: main.cc  swsdata.cc
